* Tweaked theme selector to be a bit closer to what the user experiences. The currently selected theme is now indicated as such ('Current theme'). The currently selected skin also gets its own class (should probably use a caption like for the theme), and doesn't show the Pick links. Child skins also get more left padding, to emphasize their nature as a child, and their thumbnails are resized to ensure they don't use up too much vertical space. (Themes.template.php, index.css) * Commenazi. (latest-themes.php, Themes.php)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1180,6 +1180,8 @@ dl#feed
 	text-shadow: white 0 1px 2px
 	&, a
 		color: channels(gray,0,0,30%)
+	.current_skin > & final
+		background: #fafafa
 
 .cat final, .title final
 	font: bold 1.2em/1.2em $head_font
